# gpuhoho

./: config_template.cfg  meson.build  meson_options.txt  native-gcc10.ini
.github/workflows/: regression.yml  release-management.yml
.venv-meson/: pyvenv.cfg
Common/include/: CConfig.hpp  option_structure.hpp
Common/include/geometry/: GeometryGPU.hpp
Common/include/linear_algebra/: CSysMatrix.hpp  CSysSolve.hpp  CSysVector.hpp
Common/include/toolboxes/: allocation_toolbox.hpp  su2-src.code-workspace
Common/src/: CConfig.cpp
Common/src/geometry/: GeometryGPU.cpp  meson.build
Common/src/linear_algebra/: CSysMatrix.cpp  CSysMatrixGPU.cu  CSysSolve.cpp  CSysVectorGPU.cu
SU2_CFD/include/drivers/: CDriver.hpp
SU2_CFD/include/solvers/: CEulerSolver.hpp  CFVMFlowSolverBase.hpp  CFVMFlowSolverBase.inl  CNSSolver.hpp  aero_coeffs_cuda.h
SU2_CFD/src/: meson.build
SU2_CFD/src/drivers/: CDriver.cpp
SU2_CFD/src/solvers/: CEulerSolver.cpp  CIncEulerSolver.cpp  CNSSolver.cpp  (+1 more)
gpu_viscous_case/: history.csv  turb_flatplate.cfg
subprojects/MLPCpp/: README.md  main.cpp
tmp_lid_cavity_cpu_gpu/: .logamgx  README.txt  flow_amgx.vtu  flow_cpu.vtu  flow_gpu.vtu  history_amgx.csv  history_cpu.csv  history_gpu.csv  lid_cavity_amgx.cfg  lid_cavity_amgx_cfl1.cfg  lid_cavity_amgx_cfl1_iter40000.cfg  lid_cavity_amgx_cfl5_iter8000.cfg  lid_cavity_cpu.cfg  lid_cavity_cpu_cfl1.cfg  lid_cavity_cpu_cfl1_iter40000.cfg  lid_cavity_cpu_cfl5_iter8000.cfg  lid_cavity_gpu.cfg  lid_cavity_gpu_cfl1.cfg  lid_cavity_gpu_cfl1_iter40000.cfg  lid_cavity_gpu_cfl5_iter8000.cfg
(+12 files in other folders)
